# incubator-project

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
IncubatorLib/: CMakeLists.txt
IncubatorLib/include/Data/: UsbData.h
IncubatorLib/include/Incubator/: IncubatorApp.h  Lcd2004.h  UsbCommandHandler.h  UsbTransmissionHandler.h
IncubatorLib/include/Incubator/Controller/: EnumState.h  HumidityController.h  TemperatureController.h
IncubatorLib/include/Incubator/IncubatorData/: AdminData.h  EnumSensorStatus.h  IncubatorInformationData.h  SensorsStatusData.h  SettingsData.h  TimeInformationData.h
IncubatorLib/include/Incubator/Model/: IModel.h  InternalFlashModel.h
IncubatorLib/include/Incubator/Presenter/: Presenter.h
IncubatorLib/include/Incubator/Presenter/DataChangedEventHandlers/: AdminDataCache.h  SettingsDataCache.h  TimeInformationDataChangedEventHandler.h
IncubatorLib/include/Incubator/View/: IView.h  JoystickEvent.h  Lcd2004View.h
IncubatorLib/include/Incubator/View/DataChangedEventHandler/: DataChangedEventHandlers.h  IAdminDataChangedEventHandler.h  ISettingsDataChangedEventHandler.h  ITimeInformationDataChangedEventHandler.h
IncubatorLib/include/Incubator/View/Screen/: AScreen.h  AdministatorSettingsScreen.h  CurrentTimeSettingsScreen.h  DefaultsSettingsScreen.h  EnumScreenType.h  HumiditySettingsScreen.h  HysterisisHumiditySettingsScreen.h  IncubatorSettingsScreen.h  IncubatorTimeSettingsScreen.h  MainScreen.h  MenuScreen.h  ScreenFacade.h  SensorsStatusScreen.h  SettingsScreen.h  TemperaturePidSettingsScreen.h  TemperatureSettingsScreen.h  TimeSettingsScreen.h
IncubatorLib/include/Incubator/View/Screen/DataSetScreen/: ADataSetScreen.h  AHumidityDataSetScreen.h  AHysterisisHumidityDataSetScreen.h  APidDataSetScreen.h  ATemperatureDataSetScreen.h  CurrentDayDataSetScreen.h  CurrentHourDataSetScreen.h  CurrentMinuteDataSetScreen.h  DDataSetScreen.h  HumidityDataSetScreen.h  HumidityLastDaysDataSetScreen.h  IDataSetScreen.h  LastDayDataSetScreen.h  LowerHysterisisHumidityDataSetScreen.h  PDataSetScreen.h  TemperatureDataSetScreen.h  TemperatureLastDaysDataSetScreen.h  TotalDayDataSetScreen.h  UpperHysterisisHumidityDataSetScreen.h
IncubatorLib/include/Incubator/View/Screen/QuestionScreen/: AQuestionScreen.h  AdministratorResetQuestionScreen.h  EnumQuestionSelection.h  SaveQuestionScreen.h  TimeResetQuestionScreen.h
IncubatorLib/include/TimeUtils/: MillisecondTimer.h  TimeSettings.h  TimerManager.h
IncubatorLib/include/Utils/: CacheManager.h  StringUtils.h
IncubatorLib/src/: IncubatorApp.cpp
IncubatorLib/src/Incubator/: IncubatorApp.cpp  Lcd2004.cpp  UsbCommandHandler.cpp  UsbTransmissionHandler.cpp
IncubatorLib/src/Incubator/Controller/: HumidityController.cpp  TemperatureController.cpp
IncubatorLib/src/Incubator/IncubatorData/: AdminData.cpp  IncubatorInformationData.cpp  SettingsData.cpp  TimeInformationData.cpp
IncubatorLib/src/Incubator/Model/: InternalFlashModel.cpp
IncubatorLib/src/Incubator/Presenter/: Presenter.cpp
IncubatorLib/src/Incubator/Presenter/DataChangedEventHandlers/: AdminDataCache.cpp  SettingsDataCache.cpp  TimeInformationDataChangedEventHandler.cpp
IncubatorLib/src/Incubator/View/: Lcd2004View.cpp
IncubatorLib/src/Incubator/View/Screen/: AdministatorSettingsScreen.cpp  CurrentTimeSettingsScreen.cpp  DefaultsSettingsScreen.cpp  HumiditySettingsScreen.cpp  HysterisisHumiditySettingsScreen.cpp  IncubatorSettingsScreen.cpp  IncubatorTimeSettingsScreen.cpp  MainScreen.cpp  MenuScreen.cpp  ScreenFacade.cpp  SensorsStatusScreen.cpp  SettingsScreen.cpp  TemperaturePidSettingsScreen.cpp  TemperatureSettingsScreen.cpp  TimeSettingsScreen.cpp
IncubatorLib/src/Incubator/View/Screen/DataSetScreen/: ADataSetScreen.cpp  AHumidityDataSetScreen.cpp  AHysterisisHumidityDataSetScreen.cpp  APidDataSetScreen.cpp  ATemperatureDataSetScreen.cpp  CurrentDayDataSetScreen.cpp  CurrentHourDataSetScreen.cpp  CurrentMinuteDataSetScreen.cpp  DDataSetScreen.cpp  DateUtils.cpp  DateUtils.h  HumidityDataSetScreen.cpp  HumidityLastDaysDataSetScreen.cpp  IDataSetScreen.cpp  LastDayDataSetScreen.cpp  LowerHysterisisHumidityDataSetScreen.cpp  PDataSetScreen.cpp  TemperatureDataSetScreen.cpp  TemperatureLastDaysDataSetScreen.cpp  TotalDayDataSetScreen.cpp  UpperHysterisisHumidityDataSetScreen.cpp
IncubatorLib/src/Incubator/View/Screen/QuestionScreen/: AQuestionScreen.cpp  AdministratorResetQuestionScreen.cpp  SaveQuestionScreen.cpp  TimeResetQuestionScreen.cpp
IncubatorLib/src/TimeUtils/: TimeSettings.cpp  TimerManager.cpp
bsp/: CMakeLists.txt
bsp/include/: bsp_config.h
bsp/src/: STM32F103C8Tx_FLASH.ld  bsp_bme280.c  bsp_bme280.h  bsp_config.c  bsp_lcd_20x4.c  bsp_lcd_20x4.h
bsp/src/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
bsp/src/Core/Src/: stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c
bsp/src/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_adc.h  stm32f1xx_hal_adc_ex.h  stm32f1xx_hal_iwdg.h  stm32f1xx_hal_tim.h  stm32f1xx_hal_tim_ex.h
bsp/src/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_adc.c  stm32f1xx_hal_adc_ex.c  stm32f1xx_hal_iwdg.c  stm32f1xx_hal_pcd.c  stm32f1xx_hal_tim.c  stm32f1xx_hal_tim_ex.c
bsp/src/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
bsp/src/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
bsp/src/USB_DEVICE/App/: usbd_cdc_if.c
cubemx-generated/: .mxproject  incubator-project.ioc
cubemx-generated/Core/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
cubemx-generated/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
cubemx-generated/EWARM/: Project.eww  incubator-project.ewd  incubator-project.ewp
src/: main.c  main.cpp
